--- a/InicioProjeto/App.config
+++ b/InicioProjeto/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
 <connectionStrings>
-    <add name="BrokerMessageEntities" connectionString="metadata=res://*/DataBase.csdl|res://*/DataBase.ssdl|res://*/DataBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=notedev\SQLEXPRESS;initial catalog=BrokerMessage;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="BrokerMessageEntities" connectionString="metadata=res://*/DataBase.csdl|res://*/DataBase.ssdl|res://*/DataBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AGA1PV9\SQLEXPRESS;initial catalog=BrokerMessage;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <system.serviceModel>
     <bindings>
