--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -74,15 +74,8 @@
       <DependentUpon>BrokerMessageDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Command\ConfigStatus.cs" />
-    <Compile Include="DAO\ADDINFO_TAB_TGTEDUEKDao.cs" />
-    <Compile Include="DAO\ADDINFO_TAB_TGTEDUEPDao.cs" />
-    <Compile Include="DAO\ADDRESS_TAB_TGTEDUEKDao.cs" />
-    <Compile Include="DAO\ATOCON_TAB_TGTEDUEPDao.cs" />
     <Compile Include="DAO\DetalheErrorDao.cs" />
-    <Compile Include="DAO\DUEATRIB_TAB_TGTEDUEPDao.cs" />
     <Compile Include="DAO\EmbarqueDao.cs" />
-    <Compile Include="DAO\MAKTX_TEXTDao.cs" />
-    <Compile Include="DAO\NFEREF_TAB_TGTEDUEPDao.cs" />
     <Compile Include="DAO\SHP_TEXTDao.cs" />
     <Compile Include="DAO\StatusDao.cs" />
     <Compile Include="DAO\TGTEDUEKDao.cs" />
@@ -92,17 +85,18 @@
     <Compile Include="DAO\TGTESHK_NDao.cs" />
     <Compile Include="DAO\TGTESHP_NDao.cs" />
     <Compile Include="DAO\TPCKDao.cs" />
-    <Compile Include="Infra\ComunicaGTE.cs" />
-    <Compile Include="Business\ConfigureService.cs" />
+    <Compile Include="Infra\RecordFile.cs" />
+    <Compile Include="Infra\RequestWebService.cs" />
+    <Compile Include="Infra\ConfigureService.cs" />
     <Compile Include="Business\ExportationMessageRequest.cs" />
     <Compile Include="Business\ExportationMessageResponse.cs" />
     <Compile Include="Business\ImportationMessageRequest.cs" />
     <Compile Include="Business\ImportationMessageResponse.cs" />
-    <Compile Include="Business\MakeLog.cs" />
-    <Compile Include="Business\ObjectForDB.cs" />
-    <Compile Include="Business\OriginalText.cs" />
+    <Compile Include="Infra\MakeLog.cs" />
+    <Compile Include="Business\DesserializeXml.cs" />
+    <Compile Include="Business\IOriginalText.cs" />
     <Compile Include="Infra\SaveXMLOriginal.cs" />
-    <Compile Include="Business\XmlForGTE.cs" />
+    <Compile Include="Business\SerializeXml.cs" />
     <Compile Include="Command\IMessage.cs" />
     <Compile Include="Command\Mensagem1.cs" />
     <Compile Include="Command\Mensagem2.cs" />
@@ -117,14 +111,11 @@
     <Compile Include="ObjectMessages\Cabecalho.cs" />
     <Compile Include="ObjectMessages\DadosBroker.cs" />
     <Compile Include="ObjectMessages\DataHeaderRequest.cs" />
-    <Compile Include="ObjectMessages\DatasToRequestExportation3.cs" />
-    <Compile Include="ObjectMessages\DatasToRequestExportation4.cs" />
+    <Compile Include="Business\DatasToRequestExportation3.cs" />
+    <Compile Include="Business\DatasToRequestExportation4.cs" />
+    <Compile Include="Business\DatasToRequestExportation5.cs" />
     <Compile Include="ObjectMessages\DetalheError.cs" />
-    <Compile Include="InnerException\BaseInnerException.cs" />
-    <Compile Include="InnerException\ConfigureObjectException.cs" />
-    <Compile Include="InnerException\ConfigureXmlException.cs" />
-    <Compile Include="InnerException\SelectDBException.cs" />
-    <Compile Include="InnerException\UpdateDBException.cs" />
+    <Compile Include="InnerException\ChangeXmlException.cs" />
     <Compile Include="InnerUtil\ConfigureDate.cs" />
     <Compile Include="InnerUtil\EncodingUTF8.cs" />
     <Compile Include="InnerUtil\MessagesOfReturn.cs" />
@@ -135,23 +126,28 @@
     <Compile Include="ObjectMessages\ADDINFO_TAB_TGTEDUEK.cs" />
     <Compile Include="ObjectMessages\ADDINFO_TAB_TGTEDUEP.cs" />
     <Compile Include="ObjectMessages\ATOCON_TAB_TGTEDUEP.cs" />
-    <Compile Include="ObjectMessages\ConsultaGTE.cs" />
-    <Compile Include="ObjectMessages\DatasOfRequest.cs" />
-    <Compile Include="ObjectMessages\DatasToRequestExportation1.cs" />
-    <Compile Include="ObjectMessages\DatasToRequestExportation2.cs" />
+    <Compile Include="Business\IDatasOfRequest.cs" />
+    <Compile Include="Business\DatasToRequestExportation1.cs" />
+    <Compile Include="Business\DatasToRequestExportation2.cs" />
     <Compile Include="ObjectMessages\DUEATRIB_TAB_TGTEDUEP.cs" />
     <Compile Include="ObjectMessages\Embarque.cs" />
     <Compile Include="ObjectMessages\MAKTX_TEXT.cs" />
-    <Compile Include="ObjectMessages\Msg1ResponseExportation.cs" />
-    <Compile Include="ObjectMessages\Msg2ResponseExportation.cs" />
-    <Compile Include="ObjectMessages\Msg3RequestExportation.cs" />
-    <Compile Include="ObjectMessages\Msg4RequestExportation.cs" />
-    <Compile Include="ObjectMessages\Msg5ResponseExportation.cs" />
+    <Compile Include="ObjectMessages\RequestMessage5Exportation.cs" />
+    <Compile Include="ObjectMessages\ResponseMessage3Exportation.cs" />
+    <Compile Include="ObjectMessages\ResponseMessage4Exportation.cs" />
+    <Compile Include="ObjectMessages\ResponseWebservice.cs" />
+    <Compile Include="ObjectMessages\ResponseMessage1Exportation.cs" />
+    <Compile Include="ObjectMessages\ResponseMessage2Exportation.cs" />
+    <Compile Include="ObjectMessages\RequestMessage3Exportation.cs" />
+    <Compile Include="ObjectMessages\RequestMessage4Exportation.cs" />
+    <Compile Include="ObjectMessages\ResponseMessage5Exportation.cs" />
     <Compile Include="ObjectMessages\NFEREF_TAB_TGTEDUEP.cs" />
     <Compile Include="ObjectMessages\ObjServiceTrocaXMLConfig.cs" />
+    <Compile Include="ObjectMessages\RequestMessage2Exportation.cs" />
+    <Compile Include="ObjectMessages\RequestWebservice.cs" />
+    <Compile Include="ObjectMessages\RequestMessage1Exportation.cs" />
     <Compile Include="ObjectMessages\TPCK.cs" />
-    <Compile Include="ObjectMessages\RetornoAtualizaGTE.cs" />
-    <Compile Include="ObjectMessages\RetornoFatalErrorGTE.cs" />
+    <Compile Include="ObjectMessages\ResponseFatalError.cs" />
     <Compile Include="ObjectMessages\SHP_TEXT.cs" />
     <Compile Include="ObjectMessages\Status.cs" />
     <Compile Include="ObjectMessages\STR.cs" />
