Correção do configurador

--- a/BL/app.config
+++ b/BL/app.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="BrokerMessageEntities" connectionString="metadata=res://*/DataBase.csdl|res://*/DataBase.ssdl|res://*/DataBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AGA1PV9\SQLEXPRESS;initial catalog=BrokerMessage;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="BrokerMessageConnectionString" connectionString="Data Source=DESKTOP-AGA1PV9\SQLEXPRESS;Initial Catalog=BrokerMessage;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="BrokerMessageConnectionString" connectionString="Server=DESKTOP-AGA1PV9\SQLEXPRESS;Database=BrokerMessage;Trusted_Connection=True;" providerName="System.Data.SqlClient" />-->
+    <add name="BrokerMessageConnectionString" connectionString="Server=DESKTOP-AGA1PV9\SQLEXPRESS;Database=BrokerMessage;User Id=sa;Password=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
