--- a/ApenasTeste/App.config
+++ b/ApenasTeste/App.config
@@ -8,7 +8,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="BrokerMessageEntities" connectionString="metadata=res://*/DataBase.csdl|res://*/DataBase.ssdl|res://*/DataBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=200.232.61.50;initial catalog=BrokerMessage;user id=sa;password=itt01sao;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="BrokerMessageConnectionString" connectionString="Server=DESKTOP-AGA1PV9\SQLEXPRESS;Database=BrokerMessage;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="BrokerMessageConnectionString" connectionString="Server=DESKTOP-AGA1PV9\SQLEXPRESS;Database=BrokerMessage;User Id=sa;Password=123456;" providerName="System.Data.SqlClient" />-->
+    <add name="BrokerMessageConnectionString" connectionString="Server=DESKTOP-AGA1PV9\SQLEXPRESS;Database=BrokerMessage;User Id=sa;Password=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
